Inline Containing Only Collapsed Whitespace Not Getting a Linebox https://bugs.webkit.org/show_bug.cgi?id=31397

Reviewed by David Hyatt.

Source/WebCore:

Treat inlines containing only collapsed whitespace as empty. This allows them
to get a linebox.

Test: fast/inline/inline-containing-collapsed-whitespace-treated-as-empty.html

* dom/Position.cpp:
(WebCore::boundingBoxLogicalHeight):
(WebCore):
(WebCore::Position::hasRenderedNonAnonymousDescendantsWithHeight):
* rendering/InlineIterator.h:
(WebCore::isEmptyInline):
(WebCore):
(WebCore::bidiNextShared):
(WebCore::bidiFirstSkippingEmptyInlines):
* rendering/RenderBlockLineLayout.cpp:
(WebCore::alwaysRequiresLineBox):
(WebCore::requiresLineBox):
(WebCore::RenderBlock::LineBreaker::nextSegmentBreak):
* rendering/RenderText.cpp:
* rendering/RenderText.h:
(RenderText):

LayoutTests:

* fast/css/first-letter-capitalized-edit-select-crash-expected.txt:
* fast/inline/inline-containing-collapsed-whitespace-treated-as-empty-expected.html: Added.
* fast/inline/inline-containing-collapsed-whitespace-treated-as-empty-vertical-rl-expected.html: Added.
* fast/inline/inline-containing-collapsed-whitespace-treated-as-empty-vertical-rl.html: Added.
* fast/inline/inline-containing-collapsed-whitespace-treated-as-empty.html: Added.
* platform/chromium/TestExpectations:
* platform/efl/TestExpectations:
* platform/gtk/TestExpectations:
* platform/mac/TestExpectations:
* platform/qt/TestExpectations:

Canonical link: https://commits.webkit.org/126020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140693 268f45cc-cd09-0410-ab3c-d52691b4dbfc