Source/WebCore/rendering/RenderText.h
@@ -96,7 +96,6 @@ public:
 
     virtual IntRect linesBoundingBox() const;
     LayoutRect linesVisualOverflowBoundingBox() const;
-    IntRect linesLogicalBoundingBox() const;
 
     FloatPoint firstRunOrigin() const;
     float firstRunX() const;
